--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div class="wrapper">
-            <header>Executive Function Randomizer</header>
+            <header>Your fate</header>
             <div class="content">
                 <div class="task-area">
                     <p class="task" id="task"> Laundry </p>
